<resources>
    <string name="app_name">Top Locations</string>
    //string main activity
    <string name="btn_init">Let\'s go!</string>
    //string home
    <string name="btn_info_product1">Info</string>
    <string name="btn_info_product2">Info</string>
    <string name="btn_info_product3">Info</string>
    <string name="text_product1">Bogotá</string>
    <string name="text_product2">Medellín</string>
    <string name="text_product3">Cali</string>
    <string name="btn_text_home">Ubicaciones</string>
    //string product
    <string name="btn_info_product">Volver</string>
    <string name="title_activity_maps_google">MapsGoogle</string>

    //Strings >> CRUD Form
    <string name="textView3">¡Comparte tu lugar favorito!</string>
    <string name="idFormName">Lugar</string>
    <string name="idFormDescription">Descripción: </string>
    <string name="lon">Long.</string>
    <string name="lat">Lat.</string>
    <string name="btnFormProduct">AGREGAR</string>
    // Activity Form
    <string name="btnGet">GET</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="btnDelete">DELETE</string>
    //Activity Product Volver
    <string name="btnProductInfo">VOLVER</string>



</resources>